// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`For class emits declaration map: dts 1`] = `
"declare module "test-package" {
    export class BaseClass {
        foo(): string;
    }
    export class TestClass extends BaseClass {
        foo(): string;
    }
}
//# sourceMappingURL=index.d.ts.map
"
`;

exports[`For class emits declaration map: source map 1`] = `"{"version":3,"sources":["src/tests/classes/classes.ts"],"names":[],"mappings":";IAAA,MAAM,OAAO,SAAS;QACpB,GAAG,IAAI,MAAM,CAAA;KAGd;IAED,MAAM,OAAO,SAAU,CAAA,QAAQ,SAAS;QAC7B,GAAG,IAAI,MAAM,CAAA;KAGvB","file":"index.d.ts","sourceRoot":""}"`;

exports[`For class emits type definitions 1`] = `
"declare module "test-package" {
    export class BaseClass {
        foo(): string;
    }
    export class TestClass extends BaseClass {
        foo(): string;
    }
}
"
`;
